# rust-api-sample

./: .env.example  Cargo.toml
migrations/: 0001_tables.sql
src/: main.rs
